--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,18 @@
 *{
 	margin: 0;
 	padding: 0;
-	
 }
 
 body{
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Poppins', sans-serif!important;
+}
+
+h1 {
+	font-weight: 600;
+}
+
+p {
+	margin-bottom: 0;
 }
 
 .top-menu{
@@ -119,10 +126,11 @@ body{
     top: 20px;
 }
 
-.carouselPrincipal img {
+.carouselPrincipal .carousel .carousel-inner .carousel-item img {
     max-width: 60%;
     height: auto;
     object-fit: cover;
+    margin: 0 auto;
 }
 
 .carouselPrincipal h1 {
@@ -151,8 +159,8 @@ body{
     justify-content: center;
     top: 80px;
     background-color: #eee;
-    min-height: 300px;
-    height: 500px;
+	min-height: 800px;
+    gap: 10px;
 }
 
 .sectionTitle {
@@ -160,14 +168,13 @@ body{
     text-align: center;
     height: 60px;
     position: relative;
-    top: 40px;
+    top: 10px;
     font-size: 35px;
 }
 
 .containerAnnounces .announce {
     width: 300px;
     height: 300px;
-    padding: 15px;
 }
 
 .containerAnnounces .announce img {
@@ -178,12 +185,21 @@ body{
 
 .containerAnnounces .announce img:hover{
 	transform: scale(1.02,1.02);
+	opacity: 0.5;
 }
 
 .containerAnnounces .announce h2 {
 	text-align: center;
     font-size: 15px;
+    position: relative;
+    bottom: 170px;
+    display: none;
 }
+
+.containerAnnounces .announce:hover > h2 {
+	display: block;
+}
+
 
 .containerMatches {
     position: relative;
@@ -191,18 +207,24 @@ body{
     height: 80vh;
 }
 
-.containerMatches .matches--title {
+.matches--title {
 	position: relative;
     top: 40px;
-    margin-left: 183px;
     font-weight: 400;
+    text-align: center;
+
 }
 
-.containerMatches .matches--title span {
+.matches--title span {
 	color: #00CFB4;
 }
 
-.containerMatches .liveMatch {
+.containerMatches .partidosEnVivo {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.containerMatches .partidosEnVivo .liveMatch {
 	width: 80%;
     height: 100px;
     display: flex;
@@ -211,73 +233,74 @@ body{
     position: relative;
     top: 50px;
     border: 6px solid rgb(228 228 228 / 90%);
+    margin-bottom: 15px;
 }
 
-.containerMatches .liveMatch .infoMatch {
-    display: flex;
+.containerMatches .partidosEnVivo .liveMatch .infoMatch {
+	display: flex;
     width: 100%;
-    height: 20px;
+    height: 25px;
     flex-wrap: wrap;
     justify-content: space-between;
     position: absolute;
     background-color: #eee;
-    align-content: center;
+    align-items: center;
 }
 
-.containerMatches .liveMatch .infoMatch .date-game {
+.containerMatches .partidosEnVivo .liveMatch .infoMatch .date-game {
 	margin-left: 15px; 
 }
 
-.containerMatches .liveMatch .infoMatch .date-game span {
+.containerMatches .partidosEnVivo .liveMatch .infoMatch .date-game span {
 	color: #00CFB4;
 }
 
-.containerMatches .infoMatch .cup {
+.containerMatches .partidosEnVivo .infoMatch .cup {
 	margin-right: 15px; 
 }
 
-.containerMatches .liveMatch .matchContent {
-    width: 100%;
-    height: 80px;
+.containerMatches .partidosEnVivo .liveMatch .matchContent {
+	width: 100%;
+    height: 87px;
     position: absolute;
     display: flex;
     justify-content: space-between;
-    padding-top: 20px;
+    padding-top: 25px;
 }
 
-.containerMatches .liveMatch .matchContent .matchTime {
+.containerMatches .partidosEnVivo .liveMatch .matchContent .matchTime {
 	margin-left: 15px;
     display: flex;
     align-items: center;
 }
 
-.containerMatches .liveMatch .matchContent .matchTime span {
+.containerMatches .partidosEnVivo .liveMatch .matchContent .matchTime span {
 	font-size: 15px;
 }
 
-.containerMatches .liveMatch .matchContent .vsMatch {
+.containerMatches .partidosEnVivo .liveMatch .matchContent .vsMatch {
 	display: flex;
 	margin-right: 100px;
 }
 
-.containerMatches .liveMatch .matchContent .vsMatch img {
+.containerMatches .partidosEnVivo .liveMatch .matchContent .vsMatch img {
 	width: 55px;
 }
 
-.containerMatches .liveMatch .matchContent .vsMatch span {
+.containerMatches .partidosEnVivo .liveMatch .matchContent .vsMatch span {
 	align-items: center;
     display: flex;
     margin-left: 10px;
     margin-right: 10px;
 }
 
-.containerMatches .liveMatch .matchContent .btn-watch {
+.containerMatches .partidosEnVivo .liveMatch .matchContent .btn-watch {
 	position: relative;
     display: flex;
     align-items: center;
 }
 
-.containerMatches .liveMatch .matchContent .btn-watch a {
+.containerMatches .partidosEnVivo .liveMatch .matchContent .btn-watch a {
 	padding: 15px 40px;
     color: #fff;
     text-decoration: none;
@@ -287,186 +310,199 @@ body{
     right: 15px;
 }
 
-.containerMatches .container--title {
-	display: grid;
-    grid-template-columns: auto auto;
-    width: 100%;
-    justify-content: space-between;
-    top: 70px;
+.containerMatches .partidos {
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     position: relative;
+    top: 35px;
 }
 
-.containerMatches .container--title .matches--title {
-	top:0;
+.containerMatches .partidos .proximosPartidos {
+	width: 45%;
 }
 
-.containerMatches .container--title .prevMatches-title {
-	margin-right: 183px;
-}
-
-.containerMatches .matches {
-    display: grid;
-    grid-template-columns: auto auto;
-    width: 80%;
+.containerMatches .partidos .proximosPartidos .nextMatches {
+	width: 80%;
     margin: 0 auto;
+    height: 100px;
+    background-color: #808080;
+    border: 6px solid rgb(228 228 228 / 90%);
+    top: 50px;
     position: relative;
-    top: 80px;
-    justify-content: space-between;
+    display: flex;
+    margin-bottom: 15px;
 }
 
-.containerMatches .matches .nextMatches {
-	width: 730px;
-    background-color: #808080;
-    border: 6px solid rgb(228 228 228 / 90%);
-    height: 100px;
-    margin-bottom: 25px;
-}
-.containerMatches .matches .nextMatches .infoMatch {
-	display: flex;
-    width: 730px;
-    height: 20px;
-    flex-wrap: wrap;
+.containerMatches .partidos .proximosPartidos .nextMatches .infoMatch {
+	width: 100%;
+    height: 25px;
+    display: flex;
     justify-content: space-between;
-    position: absolute;
     background-color: #eee;
-    align-content: center;
+    align-items: center;
 }
 
-.containerMatches .matches .nextMatches .infoMatch .date-game {
-	margin-left: 15px; 
+.containerMatches .partidos .proximosPartidos .nextMatches .infoMatch .date-game {
+	margin-left: 15px;
 }
 
-.containerMatches .matches .nextMatches .infoMatch .date-game span {
+.containerMatches .partidos .proximosPartidos .nextMatches .infoMatch .date-game span {
 	color: #00CFB4;
 }
 
-.containerMatches .matches .nextMatches .matchContent {
-	width: 730px;
-    height: 80px;
+.containerMatches .partidos .proximosPartidos .nextMatches .infoMatch .cup {
+	margin-right: 15px;
+}
+@media screen and (max-width: 1210px) {
+	.containerMatches .partidos .proximosPartidos .nextMatches .infoMatch .cup {
+		display: none;
+	}
+}
+
+.containerMatches .partidos .proximosPartidos .nextMatches .matchContent {
+    width: 100%;
+    height: 87px;
     position: absolute;
     display: flex;
     justify-content: space-between;
-    padding-top: 20px;
+    padding-top: 25px;
 }
 
-.containerMatches .matches .nextMatches .matchContent .matchTime {
+.containerMatches .partidos .proximosPartidos .nextMatches .matchContent .matchTime {
 	margin-left: 15px;
     display: flex;
     align-items: center;
 }
 
-.containerMatches .matches .nextMatches .matchContent .matchTime span {
+.containerMatches .partidos .proximosPartidos .nextMatches .matchContent .matchTime span {
 	font-size: 15px;
 }
 
-.containerMatches .matches .nextMatches .matchContent .vsMatch {
-    display: flex;
-    margin-right: 100px;
+.containerMatches .partidos .proximosPartidos .nextMatches .matchContent .vsMatch {
+	display: flex;
+	margin-left: 15px;
 }
 
-.containerMatches .matches .nextMatches .matchContent .vsMatch img {
+.containerMatches .partidos .proximosPartidos .nextMatches .matchContent .vsMatch img {
 	width: 55px;
 }
 
-.containerMatches .matches .nextMatches .matchContent .vsMatch span {
-	align-items: center;
-    display: flex;
+.containerMatches .partidos .proximosPartidos .nextMatches .matchContent .vsMatch span {
+	display: flex;
+    align-items: center;
     margin-left: 10px;
     margin-right: 10px;
 }
 
-.containerMatches .matches .nextMatches .matchContent .btn-watch {
+.containerMatches .partidos .proximosPartidos .nextMatches .matchContent .btn-watch {
 	position: relative;
     display: flex;
     align-items: center;
 }
 
-.containerMatches .matches .nextMatches .matchContent .btn-watch a {
+.containerMatches .partidos .proximosPartidos .nextMatches .matchContent .btn-watch a {
 	padding: 15px 40px;
     color: #fff;
     text-decoration: none;
     background-color: red;
     border-radius: 4px;
-    position: absolute;
     right: 15px;
+    position: relative;
 }
 
-.containerMatches .matches .results {
-	width: 730px;
+.containerMatches .partidos .partidosPasados {
+	width: 45%;
+}
+
+.containerMatches .partidos .partidosPasados .results {
+	width: 80%;
+    margin: 0 auto;
+    height: 100px;
     background-color: #808080;
     border: 6px solid rgb(228 228 228 / 90%);
-    height: 100px;
-    margin-bottom: 25px;
+    top: 50px;
+    position: relative;
+    display: flex;
+    margin-bottom: 15px;
 }
 
-.containerMatches .matches .results .infoMatch {
-	display: flex;
-    width: 730px;
-    height: 20px;
-    flex-wrap: wrap;
+.containerMatches .partidos .partidosPasados .results .infoMatch {
+	width: 100%;
+    height: 25px;
+    display: flex;
     justify-content: space-between;
-    position: absolute;
     background-color: #eee;
-    align-content: center;
+    align-items: center;
 }
 
-.containerMatches .matches .results .infoMatch .date-game {
-	margin-left: 15px; 
+.containerMatches .partidos .partidosPasados .results .infoMatch .date-game {
+	margin-left: 15px;
 }
 
-.containerMatches .matches .results .infoMatch .date-game span {
+.containerMatches .partidos .partidosPasados .results .infoMatch .date-game span {
 	color: #00CFB4;
 }
 
-.containerMatches .matches .results .matchContent {
-	width: 730px;
-    height: 80px;
+.containerMatches .partidos .partidosPasados .results .infoMatch .cup {
+	margin-right: 15px;
+}
+
+@media screen and (max-width: 1210px){
+	.containerMatches .partidos .partidosPasados .results .infoMatch .cup {
+		display: none;
+	}
+}
+
+.containerMatches .partidos .partidosPasados .results .matchContent {
+    width: 100%;
+    height: 87px;
     position: absolute;
     display: flex;
     justify-content: space-between;
-    padding-top: 20px;
+    padding-top: 25px;
 }
 
-.containerMatches .matches .results .matchContent .matchTime {
+.containerMatches .partidos .partidosPasados .results .matchContent .matchTime {
 	margin-left: 15px;
     display: flex;
     align-items: center;
 }
 
-.containerMatches .matches .results .matchContent .matchTime span {
+.containerMatches .partidos .partidosPasados .results .matchContent .matchTime span {
 	font-size: 15px;
 }
 
-.containerMatches .matches .results .matchContent .vsMatch {
-    display: flex;
-    margin-right: 100px;
+.containerMatches .partidos .partidosPasados .results .matchContent .vsMatch {
+	display: flex;
+	margin-left: 15px;
 }
 
-.containerMatches .matches .results .matchContent .vsMatch img {
+.containerMatches .partidos .partidosPasados .results .matchContent .vsMatch img {
 	width: 55px;
 }
 
-.containerMatches .matches .results .matchContent .vsMatch span {
-	align-items: center;
-    display: flex;
+.containerMatches .partidos .partidosPasados .results .matchContent .vsMatch span {
+	display: flex;
+    align-items: center;
     margin-left: 10px;
     margin-right: 10px;
 }
 
-.containerMatches .matches .results .matchContent .btn-watch {
+.containerMatches .partidos .partidosPasados .results .matchContent .btn-watch {
 	position: relative;
     display: flex;
     align-items: center;
 }
 
-.containerMatches .matches .results .matchContent .btn-watch a {
+.containerMatches .partidos .partidosPasados .results .matchContent .btn-watch a {
 	padding: 15px 40px;
     color: #fff;
     text-decoration: none;
     background-color: red;
     border-radius: 4px;
-    position: absolute;
     right: 15px;
+    position: relative;
 }
 
 .containerImagenes{
